opmon-game.ga is back! (here too)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(OPMON_VERSION_PATCH 0)
 
 set(OPMON_CONTACT "Cyrion <jlppcprog@ntymail.com>")
 set(OPMON_DESCRIPTION_SUMMARY "An open source RPG monster fighting game")
-set(OPMON_HOMEPAGE "http://opmon.ga/")
+set(OPMON_HOMEPAGE "http://opmon-game.ga/")
 
 # libsfml is splited in many packages on debian:
 # libsfml-xxx2 (until 2.4), then libsfml-xxx2.4
